# gcp-robo-cloud

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/isaac_lab_train/: gcp-robocloud.yaml  requirements.txt  train.py
examples/mujoco_ppo/: requirements.txt  train.py
examples/simple_pytorch/: train.py
src/gcp_robo_cloud/: __init__.py  __main__.py
src/gcp_robo_cloud/cli/: app.py  config.py  estimate.py  launch.py  status.py  stop.py
src/gcp_robo_cloud/core/: config.py  job.py
src/gcp_robo_cloud/docker/: builder.py  detect.py
src/gcp_robo_cloud/gcp/: auth.py  compute.py  pricing.py  registry.py  storage.py
src/gcp_robo_cloud/monitor/: logs.py  watchdog.py
src/gcp_robo_cloud/sync/: download.py  ignore.py  upload.py
src/gcp_robocloud/: __init__.py  __main__.py
src/gcp_robocloud/cli/: app.py  config.py  estimate.py  launch.py  status.py  stop.py
src/gcp_robocloud/core/: config.py  gpu_map.py  job.py
src/gcp_robocloud/docker/: builder.py
src/gcp_robocloud/docker/templates/: __init__.py
src/gcp_robocloud/gcp/: auth.py  compute.py  pricing.py  registry.py  storage.py
src/gcp_robocloud/monitor/: logs.py  watchdog.py
src/gcp_robocloud/sync/: download.py  ignore.py  upload.py
tests/: conftest.py
tests/unit/: test_config.py  test_docker_detect.py  test_gpu_map.py  test_ignore.py  test_job.py  test_pricing.py
